[tool.poetry]
name = "fpp-closed-expressions"
version = "0.1.0"
description = "Closed expressions for shot noise processes."
authors = ["gregordecristoforo <gregor.decristoforo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
mpmath = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
