[tool.poetry]
name = "closedexpressions"
version = "0.1.2"
description = "Closed expressions for shot noise processes."
homepage = "https://github.com/uit-cosmo/fpp-closed-expressions"
authors = ["gregordecristoforo <gregor.decristoforo@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
mpmath = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
